apps/security/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vaultwarden
  namespace: security
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  rules:
    - host: "vaultwarden.localhost"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
